@@ -22,6 +22,13 @@ Next
     to try to clear the PE bit when switching to VM86 even though
     it clearly understands it's not supposed to be able to clear it.
     (joncampbell123).
+  - VCPI: It turns out the VCPI server GDT selectors are expected to
+    be 32-bit, because the protected mode VCPI entry point is expected
+    to be called as if 32-bit far pointer. Correct VCPI entry point
+    to return using RETF, not IRETD, which solves crashing issues with
+    DOS extenders. For the first time, DOS extenders are working with
+    the DOSBox-X built-in implementation of VCPI and most DOS games
+    run fine now with it. (joncampbell123).
 
 2024.12.04
   - Arrange memory device allocation so that it is possible to allocate
